# channelspanner

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
dep/vst2/: README  vestige.h
src/: biquad.c  biquad.h  draw.c  draw.h  logging.h  plugin.cpp  process.c  process.h  spanner.h  spanner_linux.c  spectrumdraw.c  spectrumdraw.h  spectrumgenerator.c  spectrumgenerator.h  textshader.h  units.h  vst2.cpp  vst2.h
